Remove SIOPT_SSR.asv file and update .gitignore to exclude it

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/SRC/zagmg.F90
 slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/SRC/zagmgpar_intparamC.c
 poznamky_MB.docx
 poznamky.docx
+slope_stability/SIOPT_SSR.asv
