Add new mesh loading functions and update slope stability scripts
- Introduced `load_mesh_gmsh_waterlevels.m` and `darcy_boundary_3D_hetero.m` for improved mesh handling with water levels.
- Added a new HDF5 mesh file `slope_with_waterlevels.h5`.
- Updated `slope_stability_3D_homo_seepage_SSR.m` to change mesh density parameter for better resolution.
- Updated `.gitignore` to exclude new ASV files.

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/SRC/zagmgpar_in
 poznamky_MB.docx
 poznamky.docx
 slope_stability/SIOPT_SSR.asv
+slope_stability/slope_stability_3D_homo_seepage_SSR.asv
