Added water seepage and new vizualisations

--- a/.gitignore
+++ b/.gitignore
@@ -1,67 +1,11 @@
-slope_stability/agmg/zmtlagmg.mexa64
-slope_stability/agmg/dmtlagmg.mexa64
-slope_stability/agmg/agmg.m
 convert_eol.fish
-slope_stability/agmg/AGMG_4.2.1-aca.for.win.zip
-slope_stability/agmg/agmg.zip
-slope_stability/agmg/dmtlagmg.mexw64
-slope_stability/agmg/zmtlagmg.mexw64
-slope_stability/agmg/AGMG_4.2.1-aca.for.win/AGMG_4.2.1-aca/LICENSE
-slope_stability/agmg/AGMG_4.2.1-aca.for.win/AGMG_4.2.1-aca/README
-slope_stability/agmg/AGMG_4.2.1-aca.for.win/AGMG_4.2.1-aca/Doc/agmg_userguide.pdf
-slope_stability/agmg/AGMG_4.2.1-aca.for.win/AGMG_4.2.1-aca/Doc/agmg.pdf
-slope_stability/agmg/AGMG_4.2.1-aca.for.win/AGMG_4.2.1-aca/Example_seq/Example_seq_c.c
-slope_stability/agmg/AGMG_4.2.1-aca.for.win/AGMG_4.2.1-aca/Example_seq/Example_seq.f90
-slope_stability/agmg/AGMG_4.2.1-aca.for.win/AGMG_4.2.1-aca/Example_seq/Makefile
-slope_stability/agmg/AGMG_4.2.1-aca.for.win/AGMG_4.2.1-aca/SRC/dagmg_intparamC.c
-slope_stability/agmg/AGMG_4.2.1-aca.for.win/AGMG_4.2.1-aca/SRC/dagmg_mumps.F90
-slope_stability/agmg/AGMG_4.2.1-aca.for.win/AGMG_4.2.1-aca/SRC/dagmg.F90
-slope_stability/agmg/AGMG_4.2.1-aca.for.win/AGMG_4.2.1-aca/SRC/dagmgpar_intparamC.c
-slope_stability/agmg/AGMG_4.2.1-aca.for.win/AGMG_4.2.1-aca/SRC/Makefile
-slope_stability/agmg/AGMG_4.2.1-aca.for.win/AGMG_4.2.1-aca/SRC/zagmg_intparamC.c
-slope_stability/agmg/AGMG_4.2.1-aca.for.win/AGMG_4.2.1-aca/SRC/zagmg_mumps.F90
-slope_stability/agmg/AGMG_4.2.1-aca.for.win/AGMG_4.2.1-aca/SRC/zagmg.F90
-slope_stability/agmg/AGMG_4.2.1-aca.for.win/AGMG_4.2.1-aca/SRC/zagmgpar_intparamC.c
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.for.mac.zip
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.for.tar.gz
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.for.win.zip
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.jul.tar.gz
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.mac.zip
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.mtl.mac.zip
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.mtl.tar.gz
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.mtl.win.zip
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.oct.mac.zip
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.oct.tar.gz
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.oct.win.zip
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.tar.gz
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win.zip
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/LICENSE
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/README
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/Doc/agmg_userguide.pdf
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/Doc/agmg.pdf
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/Example_seq/Example_seq_c.c
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/Example_seq/Example_seq.f90
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/Example_seq/Makefile
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/Matlab/agmg.m
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/Matlab/dmtlagmg.mexw64
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/Matlab/zmtlagmg.mexw64
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/Octave/agmg.cc
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/Octave/dagmg_mumps.F90
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/Octave/dagmg_oct.F90
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/Octave/dagmg_oct.F90~
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/Octave/make_agmg_octfile.m
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/Octave/zagmg_mumps.F90
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/Octave/zagmg_oct.F90
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/SRC/dagmg_intparamC.c
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/SRC/dagmg_mumps.F90
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/SRC/dagmg.F90
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/SRC/dagmgpar_intparamC.c
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/SRC/Makefile
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/SRC/zagmg_intparamC.c
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/SRC/zagmg_mumps.F90
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/SRC/zagmg.F90
-slope_stability/agmg/agmg/agmg/AGMG_4.2.1-aca.win/AGMG_4.2.1-aca/SRC/zagmgpar_intparamC.c
+slope_stability/agmg
 poznamky_MB.docx
 poznamky.docx
-slope_stability/SIOPT_SSR.asv
-slope_stability/slope_stability_3D_homo_seepage_SSR.asv
+*.asv
+*.fig
+*.pdf
+*.png
+*.pos
+*.mat
+*.mat
