Integrate HYPRE BoomerAMG across scripts and clean repository layout
Implemented repository-wide HYPRE BoomerAMG support in MATLAB drivers and cleaned up the workspace structure.

Linear solver integration:
- Added persistent HYPRE BoomerAMG MATLAB wrappers under +LINEAR_SOLVERS:
  - build_hypre_boomeramg_mex
  - hypre_boomeramg_setup / apply / clear
  - diag_prec_HYPRE_BOOMERAMG
  - near_null_space_elasticity_3D
- Extended set_linear_solver to support BOOMERAMG solver flags with unified API.
- Added automatic component mapping for both 2D and 3D coord/Q layouts; retained automatic 3D elasticity near-null-space construction.

Main script updates:
- Updated all slope_stability_* and SIOPT_* driver scripts to:
  - accept BOOMERAMG in solver type comments,
  - define boomeramg_opts blocks,
  - call set_linear_solver with unified signature (Q, coord, boomeramg_opts),
  - clear persistent HYPRE instances when BOOMERAMG is selected.
- Fixed postprocessing in slope_stability_3D_hetero_seepage_SSR so direct and indirect continuation both produce full visualization outputs.

Mesh documentation in scripts:
- Added mesh-family inventory comments above mesh selection/load lines, including available variants and (nodes/elements) counts for:
  - SIOPT_L*
  - LL_homo*
  - SSR_homo*
  - LL_hetero*
  - SSR_hetero*
  - slope_with_waterlevels_concave*
  - comsol_mesh
  - Kozinec, Luzec, Franz_dam (P1/P2 counts)

Repository cleanup/reorganization:
- Moved non-entry utility scripts from slope_stability root into slope_stability/scripts.
- Moved HYPRE MEX C++ source to slope_stability/mex.
- Moved HYPRE docs into slope_stability/docs and added AGMG vs HYPRE comparison doc there.
- Added setup_hypre_mex.sh one-call setup script and updated references.
- Updated README and .gitignore to match new structure and usage.

Net result:
- Consistent BOOMERAMG-ready solver API across all main drivers.
- Cleaner project structure with root MATLAB folder focused on entry scripts.
- Better in-script 

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,10 @@ poznamky.docx
 *.png
 *.pos
 *.mat
-*.mat
+
+# Local C/HYPRE build artifacts
+bin/
+third_party/hypre/
+third_party/hypre-build-openmp/
+third_party/hypre-openmp/
+slope_stability/hypre_boomeramg_mex.mexa64
